Solve menu overflow

--- a/srsi_front/src/components/menu/stylesheet.scss
+++ b/srsi_front/src/components/menu/stylesheet.scss
@@ -55,6 +55,8 @@
     background-color: #fff;
     filter: drop-shadow(5px 15px 8px #555);
 
+    overflow-y: auto;
+
     max-width: 100vw;
     width: 220px;
     height: calc(#{100vh} - #{100px});
